--- a/styles/main.css
+++ b/styles/main.css
@@ -179,6 +179,29 @@ section {
     display: flex;
 }
 
+.aboutContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.about {
+    display: flex;
+    flex-direction: column;
+}
+.about p {
+    font-size: 1rem;
+    margin: 1rem;
+}
+
+.about ul {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    margin: 0.5rem;
+}
+
 @media (min-width: 768px) {
     body {
         font-size: 1.1rem;
